--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "http://fa6oomawad.github.io/memeGenerator",
+  "homepage": "https://fa6oomawad.github.io/memeGenerator",
 
   "devDependencies": {
     "gh-pages": "^2.0.1"
